Clear Orphaned Relationship for the mixed test to remove orphans affecting other tests